hphp/hack/test/typecheck/pipe_lambda.php.exp
ERROR: File "pipe_lambda.php", line 8, characters 32-33:
Cannot use unstable feature: `capture_pipe_variables` (Parsing[1002])
